apps/base/swpt-accounts/shards/shard-0/chores-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chores-consumer
  labels:
    app.kubernetes.io/component: chores-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: chores-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: chores-consumer
    spec:
      containers:
        - name: chores-consumer
          image: swpt-accounts
          args: ['consume_chore_messages']
