apps/base/swpt-accounts/shards/shard-0/message-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-consumer
  labels:
    app.kubernetes.io/component: message-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: message-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: message-consumer
    spec:
      containers:
        - name: message-consumer
          image: ghcr.io/swaptacular/swpt_accounts:2.3.1
          args: ['consume_messages']
