apps/base/swpt-accounts/shards/shard-0/message-flusher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-flusher
  labels:
    app.kubernetes.io/component: message-flusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: message-flusher
  template:
    metadata:
      labels:
        app.kubernetes.io/component: message-flusher
    spec:
      containers:
        - name: message-flusher
          image: ghcr.io/swaptacular/swpt_accounts:2.3.1
          args: ['flush_all']
