apps/base/swpt-accounts/shards/shard-0/task-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-processor
  labels:
    app.kubernetes.io/component: task-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: task-processor
  template:
    metadata:
      labels:
        app.kubernetes.io/component: task-processor
    spec:
      containers:
        - name: task-processor
          image: ghcr.io/swaptacular/swpt_accounts:2.3.1
          args: ['all']
