apps/base/swpt-accounts/shards/shard-0/tasks-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-processor
  labels:
    app.kubernetes.io/component: tasks-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: tasks-processor
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tasks-processor
    spec:
      containers:
        - name: tasks-processor
          image: swpt-accounts
          args: ['all']
