apps/base/swpt-accounts/shards/shard-0/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  labels:
    app.kubernetes.io/component: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web-server
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: web-server
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      containers:
        - name: web-server
          image: swpt-accounts
          args: ['webserver']
          ports:
            - name: http
              containerPort: 8080
