apps/base/swpt-accounts/shards/shard-0/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app.kubernetes.io/component: web-server
  ports:
    - name: http
      port: 8080
      protocol: TCP
      appProtocol: http
      targetPort: 8080
  type: LoadBalancer
