apps/base/swpt-accounts/shards/shard-0/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-shard
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-shard
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: web-server
  policyTypes:
  - Ingress
  ingress:
  - port: http
